SFDCProject/src/objects/Quick_Case_Template__c.object
<CustomObject>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <picklist>
            <controllingField>Case_Record_Type__c</controllingField>
            <picklistValues>
                <fullName>Call Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GetSatisfaction Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Automated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <picklist>
            <controllingField>Case_Record_Type__c</controllingField>
            <picklistValues>
                <fullName>Account Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autopay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing &amp; Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections/Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design / ENGR Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG: Contracted Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected Production Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Operations Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate Facility Inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation &amp; PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>Case Record Type for the case</description>
        <inlineHelpText>Select the Case Record Type for the case to be created.</inlineHelpText>
        <label>Case Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FS Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_Initial_Diagnosis__c</fullName>
        <description>FS Initial Diagnosis to be used for creating the new case.</description>
        <inlineHelpText>Enter the FS Initial Diagnosis to be used for creating the new case.</inlineHelpText>
        <label>FS Initial Diagnosis</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute with Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute with Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported to AG, BBB, Gov&apos;t, or Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private_Customer_Care_Description__c</fullName>
        <description>[Requested in SFDC-675]</description>
        <inlineHelpText>[Requested in SFDC-675]</inlineHelpText>
        <label>Private Customer Care Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Impact_Type__c</fullName>
        <label>Process Impact Type</label>
        <picklist>
            <controllingField>Case_Record_Type__c</controllingField>
            <picklistValues>
                <fullName>Escape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subset_Reason__c</fullName>
        <label>Subset Reason</label>
        <picklist>
            <controllingField>Case_Reason__c</controllingField>
            <picklistValues>
                <fullName>&quot;The Right Stuff&quot; Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Solar Stats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC power outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional System Clarification/Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As-built system different from design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autopay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aziumth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Roof for Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Method Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing System Error One-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing System Error Widespread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken panel(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quick Case Template</label>
    <listViews>
        <fullName>Account_Credits</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Account Credits</value>
        </filters>
        <label>Account Credits</label>
    </listViews>
    <listViews>
        <fullName>All_Quick_Case_Tempaltes</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Private_Customer_Care_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quick Case Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Billing_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filters>
        <label>Billing Templates</label>
    </listViews>
    <listViews>
        <fullName>Cancellation_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Cancellation</value>
        </filters>
        <label>Cancellation Templates</label>
    </listViews>
    <listViews>
        <fullName>Collections_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Collections</value>
        </filters>
        <label>Collections Templates</label>
    </listViews>
    <listViews>
        <fullName>Equipment_Templates</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Priority__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Case_Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Equipment</value>
        </filters>
        <label>Equipment Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FS_Ticket_Cases</fullName>
        <columns>NAME</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>Case_Origin__c</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Subject__c</columns>
        <columns>Private_Customer_Care_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Record_Type__c</field>
            <operation>equals</operation>
            <value>FS Ticket</value>
        </filters>
        <label>FS Ticket Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Foreclosure_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Foreclosure</value>
        </filters>
        <label>Foreclosure Templates</label>
    </listViews>
    <listViews>
        <fullName>Inspection_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Inspection</value>
        </filters>
        <label>Inspection Templates</label>
    </listViews>
    <listViews>
        <fullName>Installation_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Installation</value>
        </filters>
        <label>Installation Templates</label>
    </listViews>
    <listViews>
        <fullName>Insurance_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Insurance</value>
        </filters>
        <label>Insurance Templates</label>
    </listViews>
    <listViews>
        <fullName>Meter_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Meter</value>
        </filters>
        <label>Meter Templates</label>
    </listViews>
    <listViews>
        <fullName>Monitoring_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Monitoring</value>
        </filters>
        <label>Monitoring Templates</label>
    </listViews>
    <listViews>
        <fullName>Operations_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Operations</value>
        </filters>
        <label>Operations Templates</label>
    </listViews>
    <listViews>
        <fullName>Other_Templates</fullName>
        <columns>Case_Reason__c</columns>
        <columns>Subset_Reason__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Case_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Reason__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <label>Other Templates</label>
    </listViews>
    <nameField>
        <label>Quick Case Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Case Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>